add new implements logic
add new tasks

--- a/TheChefRestaurant/src/main/resources/application.yml
+++ b/TheChefRestaurant/src/main/resources/application.yml
@@ -7,22 +7,26 @@ logging:
                 descriptor: TRACE
         org: WARN
         org.hibernate.SQL: DEBUG
-server: port = 8080
+        org.hibernate.orm.jdbc.bind: TRACE
+        org.springframework.security: TRACE
+#server: port = 8080
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        password: 123max123
+        password: ${db_password:}
         url: jdbc:mysql://localhost:3306/the_chef_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
         username: root
     servlet:
       multipart:
           max-file-size: 50MB
           max-request-size: 50MB
+    main:
+        allow-circular-references: true
     jpa:
         database-platform: org.hibernate.dialect.MySQL8Dialect
         defer-datasource-initialization: true
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         open-in-view: false
         properties:
             hibernate:
@@ -36,7 +40,7 @@ spring:
         period: 0
     sql:
         init:
-            mode: always
+            mode: never
     thymeleaf:
         cache: false
         encoding: UTF-8
